# vscode-sksl

./: .gitignore  .gitmodules  .prettierignore  .vscode-test.js  .vscodeignore  LICENSE  README.md  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rollup.config.ts  tsconfig.base.json  tsconfig.json
.github/workflows/: build.yml  test.yml
integration-test/: diagnostics.test.ts  document.ts  helper.ts
integration-test/fixtures/: error.sksl  kind_equal.sksl  no_diagnostics.sksl
script/: index.ts  syntax.ts
src/: binary-search.test.ts  binary-search.ts  buffer-subject.test.ts  buffer-subject.ts  dynamic-buffer.test.ts  dynamic-buffer.ts  file-position.test.ts  file-position.ts  index.ts  offset-position-converter.ts  offset-position.test.ts  offset-position.ts  runner.ts  server.ts  simple-codec.test.ts  sksl-server.ts  sksl-wasi.ts  sksl-wasm.d.ts  sksl.test.ts  sksl.ts  string-subject.test.ts  string-subject.ts  subject.test.ts  subject.ts  utf-offset-converter.test.ts  utf-offset-converter.ts
wasi/: .clang-tidy  CMakeLists.txt  build.sh  main.cpp  test.sh
wasi/src/: CMakeLists.txt  data.h  formatter.cpp  formatter.h  formatter_test.cpp  lexer.cpp  lexer.h  main.cpp  module.h  modules.h  semaphore.cpp  simple_codec.cpp  simple_codec_test.cpp
wasi/src/action/: close.cpp  close.h  format.cpp  format.h  get_symbol.cpp  get_symbol.h  get_token.cpp  get_token.h  update.cpp  update.h
wasm/: .clang-format  CMakeLists.txt  build.sh  prepare.sh  test.sh
wasm/golden/: CMakeLists.txt  arithmode.cpp  arithmode.sksl  destcolor.cpp  destcolor.sksl  golden_test.cpp  golden_test.h  kawase_blur_rt.cpp  kawase_blur_rt.sksl  ripple_shader.cpp  ripple_shader.sksl
wasm/src/: CMakeLists.txt  data.h  formatter.cpp  formatter.h  formatter_test.cpp  lexer.cpp  lexer.h  main.cpp  module.h  overloaded.h  simple_codec.cpp  simple_codec.h  token.h  utf16_index.cpp  utf16_index.h  utf16_index_test.cpp  utf_offset.cpp  utf_offset_test.cpp
wasm/src/action/: close.h  definition.cpp  definition.h  format.cpp  format.h  get_symbol.cpp  get_symbol.h  get_token.cpp  get_token.h  hover.cpp  hover.h  update.cpp  update.h
